--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
 
   "name": "Playback Rate Controller",
   "short_name": "PRC",
@@ -12,16 +12,17 @@
     "128": "icon-128x128.png"
   },
 
-  "browser_action": {
+  "action": {
     "default_icon": "icon-48x48.png",
     "default_popup": "popup.html"
   },
 
   "permissions": [
-    "activeTab",
+    "activeTab"
+  ],
+  "host_permissions": [
     "<all_urls>"
   ],
-
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
