--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,34 @@
 {
   "manifest_version": 3,
-
   "name": "Playback Rate Controller",
   "short_name": "PRC",
   "description": "Take control over video playback speed! Change video/audio playback rates of HTML5 media including YouTube videos.",
-  "version": "1.3.1",
-
+  "version": "1.4.0",
   "icons": {
-    "16":  "icon-16x16.png",
-    "48":  "icon-48x48.png",
+    "16": "icon-16x16.png",
+    "48": "icon-48x48.png",
     "128": "icon-128x128.png"
   },
-
   "action": {
     "default_icon": "icon-48x48.png",
     "default_popup": "popup.html"
   },
-
   "permissions": [
     "activeTab"
   ],
   "host_permissions": [
-    "<all_urls>"
+    "http://*/*",
+    "https://*/*"
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content_main.js"],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content_main.js"
+      ],
       "all_frames": true
     }
   ]
